--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -78,6 +78,13 @@
                 <tbody id="contacts">
                 </tbody>
             </table>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination" id="pagination">
+<!--                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">1</a></li>-->
+<!--                    <li class="page-item"><a class="page-link" href="#">Next</a></li>-->
+                </ul>
+            </nav>
         </div>
         <div class="col-md-3"></div>
     </div>
